upgrade magic render, fix fade aniamtion in new project modal, hide popover arrow on safari

--- a/src/components/NewProjectModal/NewProjectModal.module.css
+++ b/src/components/NewProjectModal/NewProjectModal.module.css
@@ -40,6 +40,9 @@
     display: none;
   }
 
+  /* NOTE: if you need to implement horizontla scroll that works on wheel
+  https://css-tricks.com/pure-css-horizontal-scrolling/ */
+
   &:before,
   &:after {
     content: '';
@@ -47,12 +50,14 @@
     display: block;
     height: 100%;
     width: calc(6 * var(--padding-x));
+    opacity: 0;
     left: 0;
     background: linear-gradient(270deg, transparent 0%, var(--background) 100%);
     pointer-events: none;
     animation: fade;
     animation-timeline: --list-scroll;
     animation-range: 0px 100px;
+    animation-fill-mode: both;
   }
 
   &:after {
